border in list.html

--- a/templates/list.html
+++ b/templates/list.html
@@ -9,7 +9,7 @@
             <form action="/story" method="GET">
                 <input id="create_story" type="submit" value="Create Story" class="button" href="/story">
             </form>
-            <table>
+            <table border="1">
                 <tr>
                     {% for item in form_table_headers %}
                         <td>{{ item }}</td>
